Now showing required popup.

--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 					[
 						{control: '#txt1', required: true},
 						{control: '#txt2', required: true}
-					]);
+					], { popupLocation: 'right'});
 					
 				alert(result);
 			}
