--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 			This plugin was created with the following Goals in mind:
 		</p>
 		<ul>
-			<li>Customizable UI</li>
+			<li>Minimal CSS, so popup can be customized by application.</li>
 			<li>No need for &lt;form&gt; element</li>
 			<li>Lightweight, clean, minimalist</li>
 			<li>Allow 'Required' and 'Number' validation</li>
