--- a/test.html
+++ b/test.html
@@ -2,6 +2,8 @@
 	<head>
 		<script src="http://code.jquery.com/jquery-1.6.4.js"></script>
 		<script src="file:///C:/DEV/Personal/willidate/jquery.willidate.1.1.js"></script>
+		<script src="file:///C:/DEV/Personal/willidate/date-en-us.js" type="text/javascript"></script>
+
 
 		<style>
 			.border
@@ -19,6 +21,7 @@
 			{
 				$('#required-test-panel1 input:submit').click(validateRequiredPanel);
 				$('#numeric-test-panel1 input:submit').click(validateNumericPanel);
+				$('#date-test-panel1 input:submit').click(validateDatePanel);
 			});
 			
 			function validateRequiredPanel()
@@ -41,6 +44,16 @@
 					
 				alert(result);
 			}
+
+			function validateDatePanel()
+			{
+				var result = $.willidate(
+					[
+						{control: '#date1', date: true},
+					], { popupLocation: 'bottom'});
+					
+				alert(result);
+			}
 		
 		
 		</script>
@@ -54,7 +67,8 @@
 			<li>Minimal CSS, so popup can be customized by application.</li>
 			<li>No need for &lt;form&gt; element</li>
 			<li>Lightweight, clean, minimalist</li>
-			<li>Allow 'Required' and 'Number' validation</li>
+			<li>Do date validation with the Date.js library</li>
+			<li>Allow 'required', 'date' and 'number' validation</li>
 		</ul>
 		<div class="border" id="required-test-panel1">
 			<h2>Required Test</h2>
@@ -66,6 +80,11 @@
 		<div class="border" id="numeric-test-panel1">
 			<h2>Numeric Test</h2>
 			Numeric: <input type="text" id="nr1" /><br/>
+			<input type="submit"/>
+		</div>
+		<div class="border" id="date-test-panel1">
+			<h2>Date Test</h2>
+			Numeric: <input type="text" id="date1" /><br/>
 			<input type="submit"/>
 		</div>
 	</body>
